--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 /* canvas {
   border-radius: 1rem;
 } */
-canvas {
+/* canvas {
   display: block;
   width: 60px !important;
   height: 120px !important;
-}
+} */
